@@ -1,4 +1,10 @@
 2006-03-16 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: added submenu with mountpoints to 'mount' in
+	  partitionmenu. (see also #330327)
+
+2006-03-16 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* compose/.cvsignore: added *.swp
 	* compose/README: corrected url
